Add first draft (base)