@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.robyrodriguez.stackbuster</groupId>
   <artifactId>stack-buster-app</artifactId>
@@ -7,7 +7,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>Stack Buster App by RobyRodriguez</name>
   <properties>
-    <jettyVersion>9.4.8.v20171121</jettyVersion>
+    <jettyVersion>9.2.3.v20140905</jettyVersion>
+    <jerseyVersion>2.25.1</jerseyVersion>
+    <maven.compiler.source>1.9</maven.compiler.source>
+    <maven.compiler.target>1.9</maven.compiler.target>
   </properties>
   <repositories>
     <repository>
@@ -22,6 +25,16 @@
       <version>${jettyVersion}</version>
     </dependency>
     <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-json-jackson</artifactId>
+      <version>${jerseyVersion}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>${jerseyVersion}</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
@@ -31,9 +44,23 @@
   <build>
     <plugins>
       <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.7.0</version>
+        <configuration>
+          <source>9</source>
+          <target>9</target>
+          <compilerArgs>
+            <arg>--add-modules</arg>
+            <arg>jdk.incubator.httpclient</arg>
+            <arg>--add-modules</arg>
+            <arg>java.xml.bind</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>1.1</version>
+        <version>1.6.0</version>
         <executions>
           <execution>
             <goals>
@@ -43,6 +70,16 @@
         </executions>
         <configuration>
           <mainClass>com.robyrodriguez.stackbuster.App</mainClass>
+          <executable>java</executable>
+          <arguments>
+            <arg>--add-modules</arg>
+            <arg>jdk.incubator.httpclient</arg>
+            <arg>--add-modules</arg>
+            <arg>java.xml.bind</arg>
+            <argument>-classpath</argument>
+            <classpath />
+            <argument>com.robyrodriguez.stackbuster.App</argument>
+          </arguments>
         </configuration>
       </plugin>
     </plugins>
